# libserial

./: README.md  SConstruct  meson.build  test.c
include/: serial.h
src/: serial.c  serial_win32.c
test/: 01_modem.c
